Trying to parallelize task submission.
Change-Id: I6714bf850147ca7029c9820bc53dbad291b74fa2